added salon api funcs
